--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -1,25 +1,199 @@
----
-title: "Reproducible Research: Peer Assessment 1"
-output: 
-  html_document:
-    keep_md: true
----
+﻿
+
+# Introduction
+
+#### Background
+
+This is a report for the first project of the [Reproducible Research Course] [1] on [Coursera] [2]. The full activity description can be found [here] [3]
+
+[1]: https://www.coursera.org/
+[2]: https://www.coursera.org/learn/reproducible-research/home/welcome
+[3]: https://www.coursera.org/learn/reproducible-research/peer/gYyPt/course-project-1
+
+#### Assignment
 
 
-## Loading and preprocessing the data
+This assignment will be described in multiple parts. You will need to write a report that answers the questions detailed below. Ultimately, you will need to complete the entire assignment in a single R markdown document that can be processed by knitr and be transformed into an HTML file.
 
+Throughout your report make sure you always include the code that you used to generate the output you present. When writing code chunks in the R markdown document, always use echo = TRUE so that someone else will be able to read the code. **This assignment will be evaluated via peer assessment so it is essential that your peer evaluators be able to review the code for your analysis.**
 
+For the plotting aspects of this assignment, feel free to use any plotting system in R (i.e., base, lattice, ggplot2)
 
-## What is mean total number of steps taken per day?
+Fork/clone the [GitHub repository created for this assignment] [4]. You will submit this assignment by pushing your completed files into your forked repository on GitHub. The assignment submission will consist of the URL to your GitHub repository and the SHA-1 commit ID for your repository state.
 
+[4]: https://github.com/rdpeng/RepData_PeerAssessment1
 
+----------------------------------------------------------------------------
 
-## What is the average daily activity pattern?
+# Body
 
+In the section *Body* we will be answering the questions proposed by the Professor. TO make the compreension easier, these questions will be separated by headings and lists.
 
+#### Loading and preprocessing the data
 
-## Imputing missing values
+1. Load the data
 
+First we must unzip the data and load it using the read.csv function.
 
+```{r}
+unzip("./activity.zip") 
+rawdt <- read.csv("./activity.csv",stringsAsFactors = F)
+```
 
-## Are there differences in activity patterns between weekdays and weekends?
+2. Process/transform the data (if necessary) into a format suitable for your analysis
+
+```{r}
+str(rawdt)
+navalues <- sum(is.na(rawdt$steps))
+napercentage <- round(mean(is.na(rawdt$steps))*100,2)
+```
+
+Upon taking a look at the data we notice that there are `r navalues` missing values, which corresponds to `r napercentage`% of the data, and that *Date* values are not classified as so.
+
+```{r}
+dt <- rawdt
+dt$date <- as.Date(dt$date)
+str(dt)
+```
+
+#### What is mean total number of steps taken per day?
+
+For this part of the assignment, you can ignore the missing values in the dataset.
+
+1. Calculate the total number of steps taken per day
+
+```{r}
+bydate <- aggregate(dt$steps, by = list(dt$date), sum)
+colnames(bydate) <- c("Date","Step")
+mean(bydate$Step, na.rm = T)
+```
+
+2. Make a histogram of the total number of steps taken each day
+
+```{r}
+library(ggplot2)
+ggplot(dt, aes(date,steps)) + 
+        geom_bar(stat = "identity") +
+        labs(x = "Days", y = "Steps taken", title = "Numbers of steps taken each day")
+```
+
+3. Calculate and report the mean and median of the total number of steps taken per day
+
+In this case, we will disconsider the days with *NA* values
+
+```{r}
+bydate.nona <- na.exclude(bydate)
+dtmean <- mean(bydate.nona[,2])
+dtmedian <- median(bydate.nona[,2])
+```
+
+So the mean of the total numbers of steps taken per day is `r dtmean` and the median is `r dtmedian`.
+
+#### What is the average daily activity pattern?
+
+1. Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
+
+```{r}
+dt.nona <- na.exclude(dt) #removing NA values
+byinterval <- with(dt.nona, aggregate(steps, by = list(interval), FUN = mean))
+colnames(byinterval) <-  c("Intervals","Average.Steps.Taken")
+ggplot(byinterval, aes(Intervals,Average.Steps.Taken)) + 
+        geom_line() +
+        labs(x = "Intervals", y = "Average Steps taken", title = "Average Steps taken in each interval")
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+```{r}
+maxinterval <- byinterval[,1][which.max(byinterval[,2])]
+valuemaxinterval <- byinterval[,2][which.max(byinterval[,2])]
+
+```
+
+As we can see by the graph, the Interval that contains the highest *Average steps taken* is `r maxinterval` which contais `r valuemaxinterval` steps.
+
+#### Imputing missing values
+
+Note that there are a number of days/intervals where there are missing values (coded as NA). The presence of missing days may introduce bias into some calculations or summaries of the data.
+
+1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
+
+As calculated before, the number of missing values (NAs) is `r navalues`, which accounts for `r napercentage`% of the total data.
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+Strategy chosen: **We are going to replace the NA of a determined interval by the average value of steps taken at that specific interval in the whole data.**
+
+```{r}
+newdt <- dt
+for (i in seq(0, 2355, 5)) {
+        newdt[which(is.na(newdt$steps) & newdt$interval == i),][,1] <- byinterval[byinterval$Intervals == i,][2]
+}
+```
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+
+Done on last item:
+
+```{r}
+head(newdt)
+summary(newdt)
+sum(is.na(newdt))
+```
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the mean and median total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+###### Raw data with NA values
+
+Histogram
+```{r}
+library(ggplot2)
+ggplot(dt, aes(date,steps)) + 
+        geom_bar(stat = "identity") +
+        labs(x = "Days", y = "Steps taken", title = "Numbers of steps taken each day")
+```
+  
+Mean: `r dtmean` 
+Median: `r dtmedian`.
+
+###### New data without NA values
+
+ New Histogram
+```{r}
+library(ggplot2)
+ggplot(newdt, aes(date,steps)) + 
+        geom_bar(stat = "identity") +
+        labs(x = "Days", y = "Steps taken", title = "Numbers of steps taken each day with NA values replaced")
+newbydate <- aggregate(newdt$steps, by = list(newdt$date), sum)
+colnames(newbydate) <- c("Date","Step")
+newdtmean <- mean(newbydate[,2])
+newdtmedian <- median(newbydate[,2])
+```
+  
+Mean: `r newdtmean` 
+Median: `r newdtmedian`.
+
+Adding NA values influences in the histogram shown, but it does not seems to have a significant change on the median and mean values.
+
+#### Are there differences in activity patterns between weekdays and weekends?
+
+For this part the weekdays() function may be of some help here. Use the dataset with the filled-in missing values for this part.
+
+1. Create a new factor variable in the dataset with two levels – “weekday” and “weekend” indicating whether a given date is a weekday or weekend day.
+
+```{r}
+newdt$Weekend = strftime(dt$date,'%u')
+newdt$Weekend <- gsub("1|2|3|4|5","Weekday",newdt$Weekend)
+newdt$Weekend <- gsub("6|7","Weekend",newdt$Weekend)
+table(newdt$Weekend)
+```
+
+2. Make a panel plot containing a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). See the README file in the GitHub repository to see an example of what this plot should look like using simulated data.
+
+```{r}
+finaldt <- aggregate(steps ~ Weekend + interval, data = newdt, FUN = 'mean')
+ggplot(finaldt, aes(interval,steps)) + 
+        geom_line() +
+        labs(x = "Intervals", y = "Average Steps taken", title = "Average Steps by Weekdays/Weekends") +
+        facet_grid(Weekend ~ .)
+```
